--- a/src/components/navBar/NavBarStyles.css
+++ b/src/components/navBar/NavBarStyles.css
@@ -1,1 +1,9 @@
+.searchBy {
+  font-size: 40px !important;
+  color: black !important;
+}
 
+.radioFont {
+  font-size: 27px !important;
+  color: black !important;
+}
