--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200;400&display=swap");
 
+/* rgb(15, 164, 201) */
+
 .App {
   text-align: center;
-  background-color: rgb(15, 164, 201);
+  background-color: #df99f0ce;
   align-items: center;
   justify-content: center;
 }
