--- a/src/components/userProfile/UserProfileStyles.css
+++ b/src/components/userProfile/UserProfileStyles.css
@@ -1,17 +1,21 @@
 .card {
-  width: 30vw;
   text-align: center;
 
   border-style: solid;
-  border-color: black;
-  border-width: 3px;
-  border-radius: 25px;
+  border-color: #373f51;
+  border-width: 8px;
+  border-radius: 15px !important;
   padding-left: 18px;
+  margin-top: 15px;
 }
 
 .userProfile {
   font-size: 30px !important;
   font-family: "Sofia Sans", sans-serif !important;
+}
+
+.boldedText {
+  font-weight: bolder !important;
 }
 
 .cardContents {
@@ -22,4 +26,5 @@
   font-size: 20px !important;
   /* font-weight: bold !important; */
   font-family: "Sofia Sans", sans-serif !important;
+  display: flex;
 }
