--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,16 @@
 .App {
   text-align: center;
   /* background-color: #df99f0ce; */
-  background-color: rgb(170, 213, 216);
-
+  background-color: #8ec5fc;
+  background-image: linear-gradient(315deg, #8ec5fc 0%, #e0c3fc 100%);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0%;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
+  font-family: "Sofia Sans", sans-serif;
 }
 
 .cardCenter {
