--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,8 @@
   /* align-items: center;
   justify-content: center; */
 }
+
+.noResults {
+  font-family: "Sofia Sans", sans-serif;
+  font-size: 40px;
+}
